src/tests/testfiles/binary-operators/types-20.txt
Error at 2:5: Binary operator operands must have the same type (have int and float)
1 / 1.0;
^
